--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                         22:00
                     </div></div>
                     <div class="col entry-text">
-                        po prehadzke v mrtvej dedinke, kde maju vsetci rebrik na dome co vedie ku kominom, sme sa vratili k autu a zistili ze hajzle pri plazi niekto zamkol. tak sme sa odjebali odtial ze najdeme daky restplace.
+                        po prechadzke v mrtvej dedinke, kde maju vsetci rebrik na dome co vedie ku kominom, sme sa vratili k autu a zistili ze hajzle pri plazi niekto zamkol. tak sme sa odjebali odtial ze najdeme daky restplace.
                     </div>
                 </div>
 
