--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
                         08:03
                     </div></div>
                     <div class="col entry-text">
-                        moc som nenaspal skrz tie vyjebane blanokridle kokoty, cely xichy mam dojebany od nich, aj clanky na prstoch.
+                        moc som nenaspal skrz tie vyjebane blanokridle kokoty, cely xicht mam dojebany od nich, aj clanky na prstoch.
                         v noci prsalo cize veci su len o trochu mokrejsie ako vcera po vyprati.
                         je tu cute cierna ovecka co ma biely koniec chvostika a flak na hlave, baruska sa tesi
                     </div>
