--- a/index.html
+++ b/index.html
@@ -919,7 +919,7 @@
                     <p class="image-desc">tuna ludia aj surfovali</p>
                 </a>
 
-                <a href="img/full/IMG_20170706_113930.jpg" data-caption="you dies">
+                <a href="img/full/IMG_20170706_113930.jpg" data-caption="yuo dies">
                     <img src="img/thumbs/IMG_20170706_113930.jpg" class="image img-fluid rounded mx-auto d-block landscape">
                     <p class="image-desc">you dies</p>
                 </a>
