changing the title as I grew fucking tired of it

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         -->
 
         <div id="app" class="container pt-5 baguette-gallery">
-            <h1 class="mb-4">ked som isiel isiel</h1>
+            <h1 class="mb-4">trip sever 2017</h1>
 
             <!-- ################# 27. june 2017 ################# -->
             <div class="day">
