--- a/index.html
+++ b/index.html
@@ -921,7 +921,7 @@
 
                 <a href="img/full/IMG_20170706_113930.jpg" data-caption="yuo dies">
                     <img src="img/thumbs/IMG_20170706_113930.jpg" class="image img-fluid rounded mx-auto d-block landscape">
-                    <p class="image-desc">you dies</p>
+                    <p class="image-desc">yuo dies</p>
                 </a>
 
                 <a href="img/full/IMG_20170706_120901.jpg" data-caption="fajne hajzle s prirodnym osvetlenim">
