--- a/index.html
+++ b/index.html
@@ -220,8 +220,9 @@
                     <img src="img/thumbs/IMG_20170630_163009.jpg" class="image img-fluid rounded mx-auto d-block landscape">
                 </a>
 
-                <a href="img/full/IMG_20170630_163547.jpg">
+                <a href="img/full/IMG_20170630_163547.jpg" data-caption="mama jezka zhavi tlsty brk kym male spia">
                     <img src="img/thumbs/IMG_20170630_163547.jpg" class="image img-fluid rounded mx-auto d-block landscape">
+                    <p class="image-desc">mama jezka zhavi tlsty brk kym male spia</p>
                 </a>
 
                 <div class="entry row">
