--- a/2019-morocco.html
+++ b/2019-morocco.html
@@ -1012,7 +1012,7 @@
                         05:00
                     </div></div>
                     <div class="col entry-text">
-                        Rano vstavacky pred piatou, lebo jahnacina sa nadranom zacala riadne ozyvat. Ale hnedy dazd nikde. Mohamed dodrzal slovo takmer presne. Cestou z letiska sa ho pytame na povinnost nosit lekarnicku v aute. Tvari sa ako keby v zivote nepocul ani len to slovo. Vraj povinny je trojuholnik a po novom hasicsky pristroj (ktory sme ofc v nasom aute nemali). Popri tom, ako mi to rozprava a zaroven soferuje, sa pozera na mna dozadu jak The Rock tak dlho, ze sa bojim, ze najebeme. Cervena je prenho takisto informativna. Inac mily chlapik velmi.
+                        Rano vstavacky pred piatou, lebo jahnacina sa nadranom zacala riadne ozyvat. Ale hnedy dazd nikde. Mohamed dodrzal slovo takmer presne. Cestou na letisko sa ho pytame na povinnost nosit lekarnicku v aute. Tvari sa ako keby v zivote nepocul ani len to slovo. Vraj povinny je trojuholnik a po novom hasicsky pristroj (ktory sme ofc v nasom aute nemali). Popri tom, ako mi to rozprava a zaroven soferuje, sa pozera na mna dozadu jak The Rock tak dlho, ze sa bojim, ze najebeme. Cervena je prenho takisto informativna. Inac mily chlapik velmi.
                     </div>
                 </div>
                 
